[tool.poetry]
name = "b2brokertest"
version = "0.1.0"
description = "Test task"
authors = ["Artem <freezedr195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
djangorestframework-jsonapi = "^7.0.1"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".env"
